# Learning-Docker

./: .gitignore  docker-compose.yml
APP/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
APP/app/: main.py
APP/app.egg-info/: PKG-INFO  requires.txt
APP/sanic/: main.py
APP/sanic/pysite/home/: home_bp.py
APP/sanic/static/: base.css  index.html  index.js
DB/: Dockerfile
DB/init/: 01-setup-db.sh
WEBSERVER/: Dockerfile
