[tool.poetry]
name = "APP"
version = "0.1.0"
description = ""
authors = ["James <jamesvanniekerk25@gmail.com>"]

[tool.poetry.scripts]
main = "app.main:run_app"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.5"
sanic = "^19.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
